Columns gap size fix

--- a/wp-content/themes/alpha/sass/blocks/builtin/_columns.scss
+++ b/wp-content/themes/alpha/sass/blocks/builtin/_columns.scss
@@ -3,6 +3,6 @@
 }
 .wp-block-column {
 	&:not(:first-child) {
-		margin-left: 60px;
+		margin-left: 50px;
 	}
 }
